[package]
name = "prism"
version = "0.1.0"
edition = "2021"
description = "High-performance userspace network stack for Mirage"

[dependencies]
# Network Core
smoltcp = { version = "0.11", features = ["std", "medium-ip", "medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "async"] }
tun-rs = { version = "2", features = ["async"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Utils
bytes = "1.5" # Safe Zero-Copy
anyhow = "1.0"
tracing = "0.1"
rand = "0.8"

# Config
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
recycler = "0.1.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
